# internal/domain/entity/user.go
@@ -3,17 +3,19 @@ package entity
 import "time"
 
 type User struct {
-	ID        uint      `json:"id"`
-	Email     string    `json:"email"`
-	Password  string    `json:"-"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
+	ID         uint       `json:"id"`
+	Email      string     `json:"email"`
+	Password   string     `json:"-"`
+	VerifiedAt *time.Time `json:"verified_at,omitempty"`
+	CreatedAt  time.Time  `json:"created_at"`
+	UpdatedAt  time.Time  `json:"updated_at"`
 }
 
 type UserRepository interface {
 	GetByID(id uint) (*User, error)
 	GetByEmail(email string) (*User, error)
 	Create(user *User) error
+	Update(user *User) error
 }
 
 type UserUseCase interface {
@@ -21,4 +23,5 @@ type UserUseCase interface {
 	GetUserByEmail(email string) (*User, error)
 	CreateUser(user *User) error
 	VerifyPassword(email, password string) (*User, error)
+	VerifyUser(userID uint) error
 }
